--- a/PDBReader.ipynb
+++ b/PDBReader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def encode_octant(octant):  # int from 0-7\n",
+    "    encoding = list(format(octant, \"03b\"))\n",
+    "    result = [0, 0, 0]\n",
+    "    \n",
+    "    for i in range(3):\n",
+    "        result[i] = int(encoding[i])\n",
+    "        \n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,6 +97,7 @@
     "        self.dimensions = None\n",
     "        self.center = None \n",
     "        self.depth = None\n",
+    "        self.category = None\n",
     "        \n",
     "        # this initializes the root node\n",
     "        if parent is None:\n",
@@ -101,10 +118,10 @@
     "            self.depth = self.parent.depth + 1\n",
     "            self.dimensions = [self.parent.dimensions[i]/2.0 for i in range(3)]\n",
     "            \n",
-    "            octant_encoding = format(self.octant, \"03b\")  # convert octant to binary\n",
+    "            octant_encoding = encode_octant(self.octant)  # convert octant to binary\n",
     "            offset = [self.dimensions[i]/2.0 for i in range(3)]\n",
     "            \n",
-    "            self.center = [self.parent.center[i] + (1 - 2*int(octant_encoding[i]))*offset[i] for i in range(3)]\n",
+    "            self.center = [self.parent.center[i] + (1 - 2*octant_encoding[i])*offset[i] for i in range(3)]\n",
     "\n",
     "    \n",
     "    # generates 8 child nodes according to the octree algorithm.\n",
@@ -191,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +251,7 @@
        "416"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,9 +262,48 @@
     "\n",
     "for leaf in tree.leaves:\n",
     "    if not leaf.points:\n",
+    "        leaf.category = 'exterior'\n",
     "        s += 1\n",
     "        \n",
     "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_flips(encoding): # determines a cell's 3 immediate siblings/neighbors \n",
+    "    bit_flips = []\n",
+    "    \n",
+    "    for i in range(len(encoding)):\n",
+    "        flip = encoding.copy()\n",
+    "        flip[i] = (encoding[i] + 1) % 2\n",
+    "        \n",
+    "        bit_flips.append(flip)\n",
+    "        \n",
+    "    return bit_flips"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 1], [1, 1, 1], [1, 0, 0]]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generate_flips([1,0,1])"
    ]
   },
   {
