--- a/PDBReader.ipynb
+++ b/PDBReader.ipynb
@@ -2,7 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from copy import deepcopy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +91,228 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_flips(encoding): # determines a cell's 3 immediate siblings/neighbors \n",
+    "    bit_flips = []\n",
+    "    \n",
+    "    for i in range(len(encoding)):\n",
+    "        flip = encoding.copy()\n",
+    "        flip[i] = (encoding[i] + 1) % 2\n",
+    "        \n",
+    "        bit_flips.append(flip)\n",
+    "        \n",
+    "    return bit_flips"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# (0,x,x) -> (1,x,x):  dim = 0, end_state = 1\n",
+    "# generates all possible (1,x,x) encodings\n",
+    "\n",
+    "def generate_closest_octants(dim, end_state):  # dim: int in [0, 2], end_state: int in [0, 1]\n",
+    "    template = [0,0,0]\n",
+    "    template[dim] = (end_state + 1) % 2\n",
+    "    closest_octants = []\n",
+    "    \n",
+    "    for i in range(2):\n",
+    "        for j in range(2):\n",
+    "            octant = template.copy()\n",
+    "            \n",
+    "            octant[(dim+1)%3] = i\n",
+    "            octant[(dim+2)%3] = j\n",
+    "            \n",
+    "            closest_octants.append(octant)\n",
+    "            \n",
+    "    return closest_octants"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 1, 0], [1, 1, 0], [0, 1, 1], [1, 1, 1]]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generate_closest_octants(1, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# every node is indexed by a sequence of octants \n",
+    "# e.g. [0, 7, 1, 3] for a node at depth 4\n",
+    "# here, each octant is returned as a binary triplet\n",
+    "# e.g. 3 is represented as [0, 1, 1]\n",
+    "\n",
+    "\n",
+    "def find_path_of_node(node, path=[]):\n",
+    "    if node.parent is None:\n",
+    "        return []\n",
+    "    \n",
+    "    path = find_path_of_node(node.parent)\n",
+    "    enc = encode_octant(node.octant)\n",
+    "    \n",
+    "    path.append(enc)\n",
+    "    \n",
+    "    return path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# say you have a sequence such as [0, 1, 0, 0, 0, 0, 0] \n",
+    "# or [0, 0, 0, 0, 1, 1, 1] and, starting from the end of the sequence, \n",
+    "# you want to know when the pattern of \"same\" entries breaks\n",
+    "# In the first example, it's at index 1. In the second, it's 4.\n",
+    "\n",
+    "\n",
+    "\n",
+    "def detect_deviation(sequence): \n",
+    "    n = len(sequence)\n",
+    "    \n",
+    "    head_prev = head = sequence[n - 1]\n",
+    "    head = sequence[n - 1]\n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        index = n - i - 1\n",
+    "        head_prev = head\n",
+    "        head = sequence[index]\n",
+    "        \n",
+    "        if head != head_prev:\n",
+    "            return index\n",
+    "        \n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def invert_path_at_index(path, index, dim=0):    \n",
+    "    inverted_path = deepcopy(path)\n",
+    "    \n",
+    "    if index is None:\n",
+    "        return inverted_path\n",
+    "    \n",
+    "    n = len(path)\n",
+    "    for i in range(index, n):\n",
+    "        inverted_path[i][dim] = (inverted_path[i][dim] + 1) % 2\n",
+    "        \n",
+    "    return inverted_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 0, 1], [0, 0, 1], [0, 1, 1]]\n",
+      "[[0, 0, 1], [1, 0, 1], [1, 1, 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = [[0,0,1],[1,0,1],[1,1,1]]\n",
+    "\n",
+    "print(invert_path_at_index(path, 0, dim=0))\n",
+    "print(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# each node is the tree has a unique path \n",
+    "# e.g. [[0,0,1],[1,0,1],[1,1,1]]\n",
+    "# as well as up to 6* neighboring nodes with similar paths\n",
+    "# *(up to 6 only if considering cells at the same depth or below)\n",
+    "#\n",
+    "# Our example path has neighboring paths:\n",
+    "# [[0,0,1],[1,0,1],[0,1,1]]  (the last octant with any of the 3 entries flipped)\n",
+    "# [[0,0,1],[1,1,1],[1,0,1]]  (entry [1] from the last two octants inverted)\n",
+    "# [[1,0,1],[0,0,1],[0,1,1]]  (sliceing the [0] indices gives a sequence\n",
+    "# {0, 1, 1} which is inverted to {1, 0, 0} keeping everything else fixed)\n",
+    "# \n",
+    "# So our path has 5 neighobring cells in the octree\n",
+    "\n",
+    "def find_neighbors_at_same_depth(path):\n",
+    "    n = len(path)\n",
+    "    neighbors = []\n",
+    "    \n",
+    "    head_prev = [None, None, None]  # can just be None but I want to be consistent\n",
+    "    head = [None, None, None]\n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        index = n - i - 1\n",
+    "        head_prev = head.copy()\n",
+    "        head = path[index].copy()\n",
+    "        \n",
+    "        for j in range(3):\n",
+    "            if head[j] != head_prev[j]:\n",
+    "                neighbor_path = invert_path_at_index(path, index, dim=j)\n",
+    "                neighbors.append(neighbor_path)\n",
+    "                \n",
+    "    return neighbors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[[0, 0, 1], [1, 0, 1], [0, 1, 1]],\n",
+       " [[0, 0, 1], [1, 0, 1], [1, 0, 1]],\n",
+       " [[0, 0, 1], [1, 0, 1], [1, 1, 0]],\n",
+       " [[0, 0, 1], [1, 1, 1], [1, 0, 1]],\n",
+       " [[1, 0, 1], [0, 0, 1], [0, 1, 1]]]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "find_neighbors_at_same_depth([[0,0,1],[1,0,1],[1,1,1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -270,40 +500,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_flips(encoding): # determines a cell's 3 immediate siblings/neighbors \n",
-    "    bit_flips = []\n",
-    "    \n",
-    "    for i in range(len(encoding)):\n",
-    "        flip = encoding.copy()\n",
-    "        flip[i] = (encoding[i] + 1) % 2\n",
-    "        \n",
-    "        bit_flips.append(flip)\n",
-    "        \n",
-    "    return bit_flips"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[[0, 0, 1], [1, 1, 1], [1, 0, 0]]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[34, 2], [9, 4]] [[34, 2], [9, 4]]\n"
+     ]
     }
    ],
    "source": [
-    "generate_flips([1,0,1])"
+    "li = [[0,2],[9,4]]\n",
+    "a = li.copy()\n",
+    "\n",
+    "a[0][0] = 34\n",
+    "\n",
+    "print(a, li)"
    ]
   },
   {
